fix the issue with the colors on mobile devices

--- a/media.css
+++ b/media.css
@@ -6,7 +6,7 @@
   td {
     border: none;
     padding: 1.5vh;
-    background-color: #edca82;
+
     font-size: 2.2vh;
   }
 
